airflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-airflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "3600"
    nginx.ingress.kubernetes.io/client-max-body-size: "5000m"
    nginx.org/client-max-body-size: "5000m"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: :"3600"
spec:
  rules:
    - host: airflow.cibr.qcri.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-cluster-web
                port:
                  number: 8080
